--- a/client/client/styles/app.css
+++ b/client/client/styles/app.css
@@ -31,3 +31,16 @@
   background: #151719;
   margin:5px 0px;
 }
+
+
+.modal-body .form-horizontal .col-sm-2,
+.modal-body .form-horizontal .col-sm-10 {
+    width: 100%
+}
+
+.modal-body .form-horizontal .control-label {
+    text-align: left;
+}
+.modal-body .form-horizontal .col-sm-offset-2 {
+    margin-left: 15px;
+}
