--- a/client/client/styles/app.css
+++ b/client/client/styles/app.css
@@ -4,14 +4,15 @@
   position:relative; 
   padding:0 0 0 55px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .container-pattern{
   background-image: url('./../images/bg.png');
-  background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center; 
+  height: 100vh;
 }
 
 
@@ -30,10 +31,9 @@
 
 .banner{
   background-image: url('./../images/bg2.png');
-  background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center; 
-  margin-left: 0;
+  height: 100%;
 }
 
 .crmCont{
@@ -47,6 +47,12 @@
     left: 4vw;
     right: 13vw;
     bottom: 0;
+    -moz-transform:rotate(80deg);
+    -webkit-transform:rotate(80deg);
+    -o-transform:rotate(80deg);
+    -ms-transform:rotate(80deg);
+    animation: spin2 3s infinite linear;
+    -webkit-animation: spin2 3s infinite linear;
   }
 
 .crmText{
@@ -72,7 +78,7 @@
     font-size: 300%;
     text-align:center;
     font-family: 'Barlow Condensed', sans-serif;    
-    color: #2a8bff;
+    color: #58b081;
   }
 
 
@@ -89,7 +95,7 @@ li{
   height:100%;
   left:-140px;
   transition:all 500ms linear;
-  background-color: #002047;
+  background-color: #d95f48;
 }
 #sidebar.active{
   left:0px;
@@ -131,7 +137,7 @@ li{
 }
 
 .seccion{
-  color:#d65a40;
+  color:#d95f48;
 }
 
 .link{
@@ -159,21 +165,32 @@ li{
     margin-left: 15px;
 }
 
-.animated { 
-    animation-duration: 1s; 
-    animation-fill-mode: both; 
-} 
 
-@keyframes zoomIn { 
-    0% { 
-        opacity: 0; 
-        transform: scale3d(.3, .3, .3); 
-    } 
-    50% { 
-        opacity: 1; 
-    } 
-} 
-.zoomIn { 
-    animation-name: zoomIn; 
+@keyframes spin2 {
+  0% {
+  -moz-transform:rotate(80deg);
+  -webkit-transform:rotate(80deg);
+  -o-transform:rotate(80deg);
+  -ms-transform:rotate(80deg);
+  }
+  100% {
+  -moz-transform:rotate(440deg);
+  -webkit-transform:rotate(440deg);
+  -o-transform:rotate(440deg);
+  -ms-transform:rotate(440deg); 
+  }
 }
-
+@-webkit-keyframes spin2 {
+  0% {
+  -moz-transform:rotate(80deg);
+  -webkit-transform:rotate(80deg);
+  -o-transform:rotate(80deg);
+  -ms-transform:rotate(80deg);
+  }
+  100% {
+  -moz-transform:rotate(440deg);
+  -webkit-transform:rotate(440deg);
+  -o-transform:rotate(440deg);
+  -ms-transform:rotate(440deg); 
+  }
+}
